[build-system]
# scikit-build-core gère CMake + Ninja pour nous
requires = [
  "scikit-build-core>=0.10",
  "pybind11>=2.8.0",
]
build-backend = "scikit_build_core.build"

[project]
name = "pyhyperiso"                 # Nom du package PyPI (pip install pyhyperiso)
version = "1.0.0"
description = "Hyperiso Python binding (C++ backend via pybind11)"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Théo Reymermier" },
  { name = "Niels Fardeau" },
]
license = { text = "MIT" }

dependencies = [
  "numpy>=1.23",
  "matplotlib>=3.6",
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: C++",
  "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
test = [
  "pytest>=8",
]
dev = [
  "build>=1.2",
  "twine>=5",
  "ruff>=0.9",
  "pre-commit>=3",
]

[project.urls]
Homepage      = "https://github.com/Hyperiso/Hyperiso"
Source        = "https://github.com/Hyperiso/Hyperiso"
Documentation = "https://github.com/Hyperiso/Hyperiso/tree/main/docs"
Issues        = "https://github.com/Hyperiso/Hyperiso/issues"
Changelog     = "https://github.com/Hyperiso/Hyperiso/blob/main/CHANGELOG.md"

# ----------------------------
# scikit-build-core (CMake + wheel)
# ----------------------------
[tool.scikit-build]
minimum-version = "0.10"

# Paquet Python à inclure dans le wheel (dossier pyhyperiso/)
wheel.packages = ["pyhyperiso"]
wheel.license-files = ["LICENSE"]
wheel.exclude = [
  "pyhyperiso/test/**",
  "pyhyperiso/example/**",
  "pyhyperiso/requirements.txt",
]

# Les tests et exemples restent dans le depot Git/CPC, mais ne sont pas
# necessaires pour reconstruire le paquet Python depuis le sdist.
sdist.exclude = [
  "core/Test/**",
  "examples_cpp/**",
  "examples_python/**",
  "pyhyperiso/test/**",
  "pyhyperiso/example/**",
  "**/*.bak",
  "**/*.zip",
  "**/* copy.cpp",
]

# Pour voir les commandes CMake/Ninja
build.verbose = true

# Sous-table CMake (une seule fois)
[tool.scikit-build.cmake]
# CMakeLists.txt du binding C++ (RELATIF à ce pyproject.toml)
source-dir = "core/src/Python"

# Type de build par défaut
build-type = "Release"

# Options CMake (via des "dotted keys")
define.CMAKE_INTERPROCEDURAL_OPTIMIZATION = "OFF"

# ----------------------------
# cibuildwheel : wheels Linux multi-Python
# ----------------------------
[tool.cibuildwheel]
# On ne build que pour CPython 3.9+ (Linux)
build = "cp39-* cp310-* cp311-* cp312-*"

# On ignore PyPy et musllinux pour commencer
skip = "pp* *-musllinux*"

[tool.cibuildwheel.linux]
archs = ["x86_64"]          # tu pourras ajouter "aarch64" plus tard
before-all = "yum install -y eigen3-devel gsl-devel"
manylinux-x86_64-image = "manylinux_2_28"

[tool.cibuildwheel.macos]
skip = "*"

[tool.cibuildwheel.windows]
skip = "*"


[tool.pytest.ini_options]
testpaths = ["pyhyperiso/test"]
addopts = "-ra"
