[build-system]
# scikit-build-core gère CMake + Ninja pour nous
requires = [
  "scikit-build-core>=0.10",
  "pybind11>=2.8.0",
]
build-backend = "scikit_build_core.build"

[project]
name = "pyhyperiso"                 # Nom du package PyPI (pip install pyhyperiso)
version = "1.0.0"
description = "Hyperiso Python binding (C++ backend via pybind11)"
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [
  { name = "Théo Reymermier" },
  { name = "Niels Fardeau" },
]
license = "GPL-3.0-or-later"
license-files = ["LICENSES/*", "THIRD_PARTY_NOTICES.md"]

dependencies = [
  "numpy>=1.23",
  "matplotlib>=3.6",
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: C++",
  "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
test = [
  "pytest>=8",
]
dev = [
  "build>=1.2",
  "twine>=5",
  "ruff==0.15.21",
  "pre-commit>=3",
  "pyyaml>=6",
]

[project.urls]
Homepage      = "https://github.com/Hyperiso/Hyperiso"
Source        = "https://github.com/Hyperiso/Hyperiso"
Documentation = "https://github.com/Hyperiso/Hyperiso/tree/main/docs"
Issues        = "https://github.com/Hyperiso/Hyperiso/issues"
Changelog     = "https://github.com/Hyperiso/Hyperiso/blob/main/CHANGELOG.md"

# ----------------------------
# scikit-build-core (CMake + wheel)
# ----------------------------
[tool.scikit-build]
minimum-version = "0.10"

# Paquet Python à inclure dans le wheel (dossier pyhyperiso/)
wheel.packages = ["pyhyperiso"]
wheel.exclude = [
  "pyhyperiso/test/**",
  "pyhyperiso/example/**",
  "pyhyperiso/requirements.txt",
]

# Les tests et exemples restent dans le depot Git/CPC, mais ne sont pas
# necessaires pour reconstruire le paquet Python depuis le sdist.
sdist.exclude = [
  "core/Test/**",
  "examples_cpp/**",
  "examples_python/**",
  "pyhyperiso/test/**",
  "pyhyperiso/example/**",
  "**/*.bak",
  "**/*.zip",
  "**/* copy.cpp",
]

# Pour voir les commandes CMake/Ninja
build.verbose = true

# Sous-table CMake (une seule fois)
[tool.scikit-build.cmake]
# CMakeLists.txt du binding C++ (RELATIF à ce pyproject.toml)
source-dir = "core/src/Python"

# Type de build par défaut
build-type = "Release"

# Options CMake (via des "dotted keys")
define.CMAKE_INTERPROCEDURAL_OPTIMIZATION = "OFF"

# ----------------------------
# cibuildwheel : wheels Linux multi-Python
# ----------------------------
[tool.cibuildwheel]
# Wheels Linux pour les versions Python officiellement supportees
build = "cp310-* cp311-* cp312-*"
skip = "pp* *-musllinux*"
build-verbosity = 1
test-requires = ["pytest>=8"]
test-command = [
  "python -c \"import pyhyperiso; assert pyhyperiso.__version__ == '1.0.0'; from pyhyperiso.phyperiso import pyhyperiso as native; assert native.__version__ == '1.0.0'\"",
  "python -m pytest {project}/pyhyperiso/test -q --import-mode=importlib",
]

[tool.cibuildwheel.environment]
CMAKE_BUILD_PARALLEL_LEVEL = "2"

[tool.cibuildwheel.linux]
archs = ["x86_64"]          # tu pourras ajouter "aarch64" plus tard
before-all = "yum install -y eigen3-devel gsl-devel"
manylinux-x86_64-image = "manylinux_2_28"

[tool.cibuildwheel.macos]
skip = "*"

[tool.cibuildwheel.windows]
skip = "*"


[tool.pytest.ini_options]
testpaths = ["pyhyperiso/test"]
addopts = "-ra"

# ----------------------------
# Ruff: lint/format policy
# ----------------------------
[tool.ruff]
target-version = "py310"
line-length = 100
exclude = [
  "core/src/ExternalIntegration/third_party",
  "core/src/ExternalIntegration/2HDMC",
  "core/src/configured_files",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.ruff.lint.per-file-ignores]
"pyhyperiso/**/__init__.py" = ["F401"]
"pyhyperiso/Common.py" = ["F401"]
"pyhyperiso/Core.py" = ["F401"]
"pyhyperiso/Observable.py" = ["F401"]
"pyhyperiso/Statistic.py" = ["F401"]
"pyhyperiso/Wilson.py" = ["F401"]
"pyhyperiso/test/Math/test_math.py" = ["F403", "F405"]
"pyhyperiso/core/Math/Math.py" = ["E741"]
