[build-system]
requires = [
  "setuptools>=42",
  "wheel",
  "scikit-build",
  "cmake>=3.20",
  "pybind11>=2.8.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "phyperiso"
version = "0.1.0"
authors = [{name = "Théo Reymermier"}, {name = "Niels Fardeau"}]
description = "Hyperiso Python binding (C++ backend via pybind11)"
requires-python = ">=3.7"


[tool.cibuildwheel]
build = "cp37-* cp38-* cp39-* cp310-* cp311-* cp312-*"

[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64"]
before-all = "yum install -y eigen3-devel"  # Exemple, si ta lib dépend de Eigen
skip = ["*-musllinux*"]

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]
before-all = "brew install eigen"

[tool.cibuildwheel.windows]
archs = ["AMD64"]
before-all = "choco install eigen" # Exemple de dépendance